--- a/gb/12/2/12/n3510209.md
+++ b/gb/12/2/12/n3510209.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/gnndfs368/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/gnndfs368/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/gnndfs368/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/gnndfs368/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/gnndfs368/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gnndfs368/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/gnndfs368/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/gnndfs368/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/gnndfs368/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/gnndfs368/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/gnndfs368/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/gnndfs368/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/gnndfs368/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/gnndfs368/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/gnndfs368/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/gnndfs368/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/gnndfs368/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/gnndfs368/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/gnndfs368/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/gnndfs368/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/gnndfs368/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/gnndfs368/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/gnndfs368/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/gnndfs368/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/gnndfs368/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/gnndfs368/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/gnndfs368/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/gnndfs368/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/gnndfs368/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/gnndfs368/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/gnndfs368/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/gnndfs368/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/gnndfs368/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/gnndfs368/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/gnndfs368/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/gnndfs368/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/gnndfs368/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/gnndfs368/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/gnndfs368/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/gnndfs368/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/gnndfs368/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/gnndfs368/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/gnndfs368/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/gnndfs368/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/gnndfs368/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/gnndfs368/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/gnndfs368/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>组图：台湾灯会涌人潮 法轮功受瞩目</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2012/02/1202112256232384-600x400.jpg" />
 <h6>天国乐团11日于台湾灯会法轮大法灯区演奏，路过民众纷纷驻足观看。（摄影: 陈柏州 / 大纪元）
 </h6>
 <hr>
-<p>【大纪元2012年02月12日讯】（大纪元记者陈柏州台湾彰化报导）<ahref="https://github.com/gnndfs368/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E7%81%AF%E4%BC%9A.md#1">台湾灯会</a>开幕后第一个周末涌现大量人潮，11日<ahref="https://github.com/gnndfs368/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95.md#1">法轮大法</a>灯区不仅有各种表演节目，还有一百多位法轮大法学员组成的<ahref="https://github.com/gnndfs368/djy/blob/master/gb/tag/%E5%A4%A9%E5%9B%BD%E4%B9%90%E5%9B%A2.md#1">天国乐团</a>在灯区定点表演，许多民众驻足观看，并拍手叫好。</p>
+<p>【大纪元2012年02月12日讯】（大纪元记者陈柏州台湾彰化报导）<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E7%81%AF%E4%BC%9A.md#1">台湾灯会</a>开幕后第一个周末涌现大量人潮，11日<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95.md#1">法轮大法</a>灯区不仅有各种表演节目，还有一百多位法轮大法学员组成的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A4%A9%E5%9B%BD%E4%B9%90%E5%9B%A2.md#1">天国乐团</a>在灯区定点表演，许多民众驻足观看，并拍手叫好。</p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
 	<ahref=" https://i.epochtimes.com/assets/uploads/2012/02/1202142211012384-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2012/02/1202142211012384-450x300.jpg" alt="" title="" width="450" b="300"
-	class="size-medium wp-image-7810530" /></a><br /><span class="bn12">腰鼓队游行至<ahref="https://github.com/gnndfs368/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95.md#1">法轮大法</a>灯区，受到民众热烈欢迎。（摄影: 许享富 / 大纪元）</span></div>
+	class="size-medium wp-image-7810530" /></a><br /><span class="bn12">腰鼓队游行至<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95.md#1">法轮大法</a>灯区，受到民众热烈欢迎。（摄影: 许享富 / 大纪元）</span></div>
 <p><!-- --></p>
-<p>除了有<ahref="https://github.com/gnndfs368/djy/blob/master/gb/tag/%E5%A4%A9%E5%9B%BD%E4%B9%90%E5%9B%A2.md#1">天国乐团</a>演奏外，来自南台湾的仙女队也十分受欢迎，不少民众争相拍照，同时，有外国人对法轮大法深感兴趣，也跟着学员炼功。精彩节目包括：武当拳、武当剑、天音合唱团演唱、腰鼓队演奏、古筝和萧的合奏、优美的舞蹈、钢琴演奏及由大法小弟子组成的“小天使”一起带动跳。◇</p>
+<p>除了有<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A4%A9%E5%9B%BD%E4%B9%90%E5%9B%A2.md#1">天国乐团</a>演奏外，来自南台湾的仙女队也十分受欢迎，不少民众争相拍照，同时，有外国人对法轮大法深感兴趣，也跟着学员炼功。精彩节目包括：武当拳、武当剑、天音合唱团演唱、腰鼓队演奏、古筝和萧的合奏、优美的舞蹈、钢琴演奏及由大法小弟子组成的“小天使”一起带动跳。◇</p>
 <p><!--image v 1.5--></p>
 <table border=0 align=center>
 <tr valign=top>
@@ -56,7 +56,7 @@
 <td>
 <div style="line-height: 90%; text-align: center;">
 	<ahref=" https://i.epochtimes.com/assets/uploads/2012/02/1202112256482384-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2012/02/1202112256482384-450x300.jpg" alt="" title="" width="450" b="300"
-	class="size-medium wp-image-7810536" /></a><br /><span class="bn12">两位来参观<ahref="https://github.com/gnndfs368/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E7%81%AF%E4%BC%9A.md#1">台湾灯会</a>的外国人（右、中）对法轮功十分好奇，法轮大法学员（左）并教导他们炼功。（摄影: 陈柏州 / 大纪元）</span></div>
+	class="size-medium wp-image-7810536" /></a><br /><span class="bn12">两位来参观<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E7%81%AF%E4%BC%9A.md#1">台湾灯会</a>的外国人（右、中）对法轮功十分好奇，法轮大法学员（左）并教导他们炼功。（摄影: 陈柏州 / 大纪元）</span></div>
 </td>
 </tr>
 </table>
@@ -104,47 +104,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/gnndfs368/djy/blob/master/gb/12/2/5/n3503917.md#1">工艺鹿港 知性之旅</a></li>
-<li><a href="https://github.com/gnndfs368/djy/blob/master/gb/12/2/5/n3503989.md#1">组图：苗栗热闹炸龙 天国乐团压轴</a></li>
-<li><a href="https://github.com/gnndfs368/djy/blob/master/gb/12/2/5/n3504003.md#1">组图2 :树林元宵踩街 天国乐团受赞许</a></li>
-<li><a href="https://github.com/gnndfs368/djy/blob/master/gb/12/2/6/n3504392.md#1">迪士尼踩街  台湾灯会热闹开幕</a></li>
-<li><a href="https://github.com/gnndfs368/djy/blob/master/gb/12/2/6/n3504564.md#1">组图：抢看米老鼠  民众塞爆鹿港街道</a></li>
-<li><a href="https://github.com/gnndfs368/djy/blob/master/gb/12/2/6/n3504679.md#1">迪士尼旋风狂扫  台湾灯会吸睛</a></li>
-<li><a href="https://github.com/gnndfs368/djy/blob/master/gb/12/2/6/n3504921.md#1">总统主持点灯 鹿港成不夜城</a></li>
-<li><a href="https://github.com/gnndfs368/djy/blob/master/gb/12/2/6/n3504926.md#1">组图：台湾灯会开幕 梦幻巴士游行</a></li>
-<li><a href="https://github.com/gnndfs368/djy/blob/master/gb/12/2/11/n3509728.md#1">台湾灯会  彰县鹿港人潮80万</a></li>
-<li><a href="https://github.com/gnndfs368/djy/blob/master/gb/12/2/11/n3509784.md#1">米奇米妮登台 台湾灯会强强滚</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/2/5/n3503917.md#1">工艺鹿港 知性之旅</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/2/5/n3503989.md#1">组图：苗栗热闹炸龙 天国乐团压轴</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/2/5/n3504003.md#1">组图2 :树林元宵踩街 天国乐团受赞许</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/2/6/n3504392.md#1">迪士尼踩街  台湾灯会热闹开幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/2/6/n3504564.md#1">组图：抢看米老鼠  民众塞爆鹿港街道</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/2/6/n3504679.md#1">迪士尼旋风狂扫  台湾灯会吸睛</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/2/6/n3504921.md#1">总统主持点灯 鹿港成不夜城</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/2/6/n3504926.md#1">组图：台湾灯会开幕 梦幻巴士游行</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/2/11/n3509728.md#1">台湾灯会  彰县鹿港人潮80万</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/2/11/n3509784.md#1">米奇米妮登台 台湾灯会强强滚</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/gnndfs368/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11011288.md#1" target="_blank">林辉：西安军事叛变前夜毛收到张杨密电</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/12/n11718013.md#1" target="_blank">制裁迫害法轮功者 美国政要支持采取行动</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/6/n11238642.md#1" target="_blank">晓明：文革中广西204地质勘探队惨绝人寰的凶杀案</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/11/n10902768.md#1" target="_blank">美向联合国提出关注 促中共停止迫害法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/kqfgmo3640/djy/blob/master/gb/21/7/10/n13080166.md#1">海地总统遭暗杀 英国灵媒预言成真</a></li>
-<li><a href="https://github.com/kqfgmo3640/djy/blob/master/gb/21/7/2/n13064296.md#1">【未解之谜】绝不能动的中国文物</a></li>
-<li><a href="https://github.com/kqfgmo3640/djy/blob/master/gb/21/7/8/n13077302.md#1">【小宇宙传说】世界各地的圣像为何落泪？</a></li>
-<li><a href="https://github.com/kqfgmo3640/djy/blob/master/gb/21/7/7/n13073679.md#1">【命理】雷神震怒 警惕不孝不义之人</a></li>
-<li><a href="https://github.com/kqfgmo3640/djy/blob/master/gb/21/7/7/n13073533.md#1">死亡20分钟灵魂出窍的经验 改变他的一生</a></li>
-<li><a href="https://github.com/kqfgmo3640/djy/blob/master/gb/21/7/10/n13081152.md#1">【横河观点】孟晚舟悬了 美撤军阿富汗中共急入？</a></li>
-<li><a href="https://github.com/kqfgmo3640/djy/blob/master/gb/21/7/10/n13080590.md#1">【唐浩视界】透视中共：疯狂造假数据四大目的</a></li>
-<li><a href="https://github.com/kqfgmo3640/djy/blob/master/gb/21/7/9/n13078925.md#1">【时事军事】中共耗弹量大增 促美对台战略清晰</a></li>
-<li><a href="https://github.com/kqfgmo3640/djy/blob/master/gb/21/7/10/n13081006.md#1">美图投资比特币现巨亏 千亿市值累计跌幅93%</a></li>
-<li><a href="https://github.com/kqfgmo3640/djy/blob/master/gb/21/7/10/n13080052.md#1">中美军力对比 差距到底多大（五）</a></li>
-<li><a href="https://github.com/kqfgmo3640/djy/blob/master/gb/21/7/10/n13080913.md#1">中共喉舌炫耀塔利班是中国朋友 网民骂翻</a></li>
-<li><a href="https://github.com/kqfgmo3640/djy/blob/master/gb/21/7/9/n13079478.md#1">打第2剂疫苗被副作用吓到 徐若瑄尝试解烧偏方</a></li>
-<li><a href="https://github.com/kqfgmo3640/djy/blob/master/gb/21/7/9/n13078244.md#1">贾永婕恍神出车祸 被撞车主不介意反送关心</a></li>
-<li><a href="https://github.com/kqfgmo3640/djy/blob/master/gb/21/7/9/n13077862.md#1">BTS英文新歌空降音源榜冠军 MV藏手语等巧思</a></li>
-<li><a href="https://github.com/kqfgmo3640/djy/blob/master/gb/21/7/9/n13079045.md#1">ATEEZ崔伞无症状确诊染疫 所有成员暂停活动</a></li>
-<li><a href="https://github.com/kqfgmo3640/djy/blob/master/gb/21/7/10/n13079410.md#1">《寻找奇迹水人》影评：传说故事 有时也成为希望寄托</a></li>
-<li><a href="https://github.com/kqfgmo3640/djy/blob/master/gb/21/7/9/n13078066.md#1">巴西流浪狗受伤 自己到兽医诊所求救</a></li>
-<li><a href="https://github.com/kqfgmo3640/djy/blob/master/gb/21/7/10/n13080166.md#1">海地总统遭暗杀 英国灵媒预言成真</a></li>
-<li><a href="https://github.com/kqfgmo3640/djy/blob/master/gb/21/7/9/n13077748.md#1">衣服发黄、有黄斑洗不掉？简单2招去除</a></li>
-<li><a href="https://github.com/kqfgmo3640/djy/blob/master/gb/21/7/10/n13080345.md#1">与失踪10年的小狗团聚 美国男子落泪</a></li>
-<li><a href="https://github.com/kqfgmo3640/djy/blob/master/gb/21/7/5/n13067703.md#1">疫苗护照真能阻病毒传播？专家：存在四大副作用</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690909.md#1">【马克时空】上百俄机被乌击落 战机如何发现导弹来袭?</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/gnndfs368/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/gnndfs368/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/12/2/12/n3510209.htm">组图：台湾灯会涌人潮 法轮功受瞩目</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/12/2/12/n3510209.htm">组图：台湾灯会涌人潮 法轮功受瞩目</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/gnndfs368/djy/blob/master/gb/12/2/12/n3510209.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/gnndfs368/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gnndfs368/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/gnndfs368/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/gnndfs368/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/gnndfs368/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gnndfs368/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/gnndfs368/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gnndfs368/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/gnndfs368/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gnndfs368/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/gnndfs368/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gnndfs368/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/gnndfs368/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gnndfs368/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/gnndfs368/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gnndfs368/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/gnndfs368/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gnndfs368/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/gnndfs368/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gnndfs368/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/gnndfs368/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gnndfs368/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/gnndfs368/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gnndfs368/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/gnndfs368/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gnndfs368/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/gnndfs368/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gnndfs368/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/gnndfs368/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gnndfs368/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/gnndfs368/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gnndfs368/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/gnndfs368/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gnndfs368/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/gnndfs368/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gnndfs368/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/gnndfs368/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gnndfs368/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/gnndfs368/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gnndfs368/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/gnndfs368/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gnndfs368/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/gnndfs368/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gnndfs368/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/gnndfs368/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gnndfs368/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/gnndfs368/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gnndfs368/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/12/2/12/n3510209.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
